--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title></title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-  <script src="https://maps.google.com/maps/api/js"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
   <script src="gmaps.js"></script>
   
   
