--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title></title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSpqq_PKLUrS2HXPh8uYKrTynBTkSGR4k&callback=initMap"
+  type="text/javascript"></script>
   <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
   <script src="gmaps.js"></script>
   
