--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">  
+
+  <title>Mapeamento Clientes Vedacit</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSpqq_PKLUrS2HXPh8uYKrTynBTkSGR4k&callback=initMap"
@@ -9,12 +17,26 @@
   <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
   <script src="gmaps.js"></script>
   
-  
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   
 </head>
 <body>
-  <div id="map"></div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+           <a class="navbar-brand" href="#">Mapeamento Comercial Construção Civil</a>
+            <img src="img/logo-branco.png" class="logo-vedacit pull-right">
+     </nav>
+
+  <div class="container-fluid map-container">
+    <div id="map"></div>
+  </div>
+
+
+
+
+
+
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
