adicao de clientes e base anamanco, atualizacao do codigo js

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
   <title>Mapeamento Clientes Vedacit</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSpqq_PKLUrS2HXPh8uYKrTynBTkSGR4k&callback=initMap"
+  <script
+          src="https://code.jquery.com/jquery-3.2.1.js"
+          integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+          crossorigin="anonymous">
+          </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFvo3U8WwTICfPNpds2CJu6ED_x6Sr2EA"
   type="text/javascript"></script>
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
+  
   <script src="gmaps.js"></script>
   
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
