inclusão dos botoes de ação e barra de progresso

--- a/index.html
+++ b/index.html
@@ -32,9 +32,26 @@
             <img src="img/logo-branco.png" class="logo-vedacit pull-right">
      </nav>
 
-  <div class="container-fluid map-container">
-    <div id="map"></div>
-  </div>
+     <div class="container-fluid map-container">
+        <div id="map"></div>
+      </div>
+
+      <div class="container">
+          <div id="myProgress">
+              <div id="myBar"></div>
+            </div>
+      </div>
+
+     <div class="row">
+       <div class="col-sm-6">
+          <a class="btn btn-lg btn-success" id="btn-cli-vedacit" role="button">mapeia clientes ativos VEDACIT</a> 
+       </div>
+       <div class="col-sm-6">
+          <a class="btn btn-lg btn-success" id="btn-cli-novos" role="button">mapeia clientes novos</a> 
+       </div>
+     </div>  
+
+ 
 
 
 
